# proj-cmd

./: Cargo.toml  README.md
.github/workflows/: release.yml
shell-scripts/: proj-fish.fish  proj-nu.nu  proj.sh
src/: args.rs  handlers.rs  main.rs
