[package]
name = "proj-cmd"
version = "0.1.5"
edition = "2021" 
authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Project organization tool"
readme = "README.md"
homepage = "https://github.com/mavenried"
repository = "https://github.com/mavenried/proj-cmd"
keywords = ["project", "organization"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.17", features = ["derive"]}
dirs = "5.0.1"
